--- a/src/Registration_and_Login.css
+++ b/src/Registration_and_Login.css
@@ -2,6 +2,7 @@
 form {
     max-width: 500px;
     margin: 0 auto;
+    margin-top: 30px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
