--- a/src/LoginForm.css
+++ b/src/LoginForm.css
@@ -5,6 +5,7 @@
     align-items: center;
     height: 100vh;
     background-color: #f0f0f0;
+    margin-top: 30px;
 }
 
 /* Container for image and form, centering them horizontally */
@@ -15,7 +16,7 @@
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     max-width: 800px;
-    height: 70%;
+    height: 75%;
     width: 100%;
 }
 
@@ -29,6 +30,7 @@
 .login-form {
     flex: 1;
     width: 100%;
+    height: auto;
     padding: 10px;
     display: flex;
     flex-direction: column;
